--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -376,7 +376,6 @@ a.tickets-button {
   z-index: 0;
 }
 .page-wrapper {
-  will-change: transform;
   position: relative;
   z-index: 1;
   // Momentum Scrolling on iOS Overflow Elements
